--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,6 @@
             <artifactId>spring-security-taglibs</artifactId>
             <version>6.0.2</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -69,6 +68,18 @@
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope><!-- -->
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>1.16.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mysql</artifactId>
+            <version>1.19.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
